<resources>
    <string name="app_name">PB Counter</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>

    <!-- General -->
    <string name="button_save">Save</string>
    <string name="toast_success">Saved</string>

    <!-- Profile -->
    <string name="profile_baby_title">Please enter your baby\'s information.</string>
    <string name="profile_baby_first_name">First name</string>
    <string name="profile_baby_last_name">Last name</string>
    <string name="profile_baby_nick_name">Nickname</string>
    <string name="profile_baby_birthday">Birthday</string>
    <string name="profile_baby_gender_male">Male</string>
    <string name="profile_baby_gender_female">Female</string>
    <string name="profile_baby_note">Note for yourself.</string>
    <string name="profile_baby_new_profile">New profile</string>
    <string name="profile_baby_enable_vibration">Vibration</string>
    <string name="profile_baby_active">Active</string>

    <!-- Home -->
    <string name="home_record_note">Note for today</string>
    <string name="home_left_level_prefix">😠: %s</string>
    <string name="home_right_level_prefix">🤬: %s</string>

    <!-- Dashboard -->
    <string name="dashboard_summary_title">Lifetime summary</string>
    <string name="dashboard_total_counts">%s</string>
    <string name="dashboard_level_1_counts">😠: %s</string>
    <string name="dashboard_level_2_counts">🤬: %s</string>
    <string name="dashboard_note">Note: %s</string>
    <string name="dashboard_most_counts_day">🔝: %s</string>
    <string name="dashboard_show_by_day">Day</string>
    <string name="dashboard_show_by_month">Month</string>

    <!-- Prefs -->
    <string name="prefs_current_id">currentId</string>
    <string name="prefs_enable_vibration">enableVibration</string>
    <string name="prefs_show_by">showBy</string>
</resources>