<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <ScrollView
        android:id="@+id/profileListContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/profileList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"/>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_baseline_add_24"
        android:contentDescription="@string/profile_baby_new_profile"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/scrollViewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/profileTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_baby_title"
                android:paddingBottom="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profileFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:paddingBottom="12dp"
                android:theme="@style/AppTextInputLayoutStyle"
                app:layout_constraintTop_toBottomOf="@id/profileTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/profileLastName"
                app:layout_constraintVertical_weight="0.5">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_baby_first_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profileLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:theme="@style/AppTextInputLayoutStyle"
                app:layout_constraintTop_toBottomOf="@id/profileTitle"
                app:layout_constraintStart_toEndOf="@id/profileFirstName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_weight="0.5">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_baby_last_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profileNickName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:theme="@style/AppTextInputLayoutStyle"
                app:layout_constraintTop_toBottomOf="@id/profileFirstName">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_baby_nick_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/profileGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="12dp"
                app:layout_constraintTop_toBottomOf="@id/profileNickName"
                app:layout_constraintStart_toStartOf="parent">

                <RadioButton
                    android:id="@+id/profileGenderMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/profile_baby_gender_male" />

                <RadioButton
                    android:id="@+id/profileGenderFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_baby_gender_female" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profileBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:theme="@style/AppTextInputLayoutStyle"
                app:layout_constraintTop_toBottomOf="@id/profileGender">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_baby_birthday" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profileNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:theme="@style/AppTextInputLayoutStyle"
                app:layout_constraintTop_toBottomOf="@id/profileBirthday">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="160dp"
                    android:gravity="top|start"
                    android:hint="@string/profile_baby_note" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/profileVibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_baby_enable_vibration"
                android:paddingEnd="8dp"
                app:layout_constraintTop_toBottomOf="@id/profileNote"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/profileActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_baby_active"
                app:layout_constraintTop_toBottomOf="@id/profileNote"
                app:layout_constraintStart_toEndOf="@id/profileVibration"/>

            <Button
                android:id="@+id/profileButtonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_save"
                app:layout_constraintTop_toBottomOf="@id/profileNote"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>