<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/dashboardSummaryCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp"
        app:cardBackgroundColor="@color/cardColorBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/dashboardSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_summary_title"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/dashboardTotalCounts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_total_counts"
                app:layout_constraintTop_toBottomOf="@id/dashboardSummary"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/dashboardLevel1Counts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_level_1_counts"
                app:layout_constraintTop_toBottomOf="@id/dashboardTotalCounts"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/dashboardLevel2Counts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_level_2_counts"
                app:layout_constraintTop_toBottomOf="@id/dashboardLevel1Counts"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/dashboardMostCountsDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_most_counts_day"
                app:layout_constraintTop_toBottomOf="@id/dashboardLevel2Counts"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dashboardRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/dashboardSummaryCard"
        app:layout_constraintVertical_weight="1"/>

</androidx.constraintlayout.widget.ConstraintLayout>